--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Website Layout | CodingLab</title>
+	<title>Desgin Your House</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet"
-		href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.work-tops.com%2Fa%2Fexpert%2Fhome-interior&psig=AOvVaw1X6-qO0agA5KQLqGA9EN5y&ust=1719238748407000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNCwwM318YYDFQAAAAAdAAAAABAE" />
+		href="" />
 </head>
 
 <body>
